--- a/scss/includes/_footer.scss
+++ b/scss/includes/_footer.scss
@@ -59,7 +59,10 @@ footer{
                                 .in-put{
                                     display: grid;
                                     grid-template-columns: repeat(2,1fr);
-                                    grid-gap: 30px   ;
+                                    grid-gap: 30px ;
+                                    @media (max-width:650px) {
+                                        grid-template-columns: 1fr;
+                                    }
                                     input{
                                         padding: 15px 10px;
                                         width: 100%;
