--- a/scss/includes/_header.scss
+++ b/scss/includes/_header.scss
@@ -5,6 +5,8 @@ header{
     width: 100vw !important;
     position: fixed;
     z-index: 100;
+    inset:0;
+   
     .wr-ap{
         height: 100%;
         width: 100%;
